# ansible-runner-nats

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
ansible_runner_nats/: __init__.py  handlers.py  tools.py
scripts/: install_nats.sh
src/ansible_runner_nats/: config_parser.py  service.py
tests/: conftest.py  natsd.py  test_ansible_runner_nats_plugin.py
tests/data/: playbook.yml
